syntax = "proto3";
package submodule2;

option go_package = "github.com/gnolang/gno/tm2/pkg/amino/genproto/example/submodule2/pb";

// messages
message StructSM2 {
	sint64 FieldA = 1;
	string FieldB = 2;
}