syntax = "proto3";
package submodule;

option go_package = "github.com/gnolang/gno/tm2/pkg/amino/genproto/example/submodule/pb";

// imports
import "github.com/gnolang/gno/tm2/pkg/amino/genproto/example/submodule2/submodule2.proto";

// messages
message StructSM {
	sint64 FieldA = 1;
	string FieldB = 2;
	submodule2.StructSM2 FieldC = 3;
}